# audiodecoder.vgmstream

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.vgmstream/: addon.xml  addon.xml.in
audiodecoder.vgmstream/resources/language/English/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.af_za/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.am_et/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.ast_es/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.az_az/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.be_by/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.ca_es/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.da_dk/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.de_de/: strings.po
audiodecoder.vgmstream/resources/language/resource.language.el_gr/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-vgmstream-note.txt
lib/vgmstream/: CMakeLists.txt  kodi-note.txt
lib/vgmstream/src/: CMakeLists.txt  mixing.c  streamtypes.h  vgmstream.c  vgmstream.h
src/: VGMCodec.cpp  VGMCodec.h
(+95 files in other folders)
